--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -8,6 +8,20 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
     padding-left: 100px;
-    padding-right: 80px;
+    padding-right: 50px;
     padding-top: 100px;
+}
+
+@media only screen and (max-width:600px) {
+    .shop-container {
+        grid-template-columns: 1fr;
+    }
+
+    .products-container {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 30px;
+        padding-left: 50px;
+        padding-right: 20px;
+        padding-top: 50px;
+    }
 }
